test/typeCheckTest/fail/test35.ic
class BadEqual {
	void main (string [] args) {
		int eq = "hi" == 2;
	}
}